[CSS Math Functions] REGRESSION(265879@main): signs-abs-computed.html WPT crashes https://bugs.webkit.org/show_bug.cgi?id=259026 rdar://111965838

Reviewed by Darin Adler.

The crash was found after re-importing WPT (in 265887@main).

265879@main collapses the root node (e.g. abs(-10) to calc(10)), but it was also too eager when collapsing.

The code attempted to collapse abs(10px + 10%), which is not possible at parse-time, since percentages cannot be resolved then.
To address this, condition the collapsing on `canCombineAllChildren()`.

Also tidy the code a bit.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/signs-abs-computed-expected.txt:
* Source/WebCore/css/calc/CSSCalcOperationNode.cpp:
(WebCore::CSSCalcOperationNode::combineChildren):
(WebCore::CSSCalcOperationNode::doubleValue const):
* Source/WebCore/css/calc/CSSCalcOperationNode.h:

Canonical link: https://commits.webkit.org/265889@main